--- a/styles/style.css
+++ b/styles/style.css
@@ -323,7 +323,7 @@ text-underline-offset: 2px;
   padding: 0 3px;
 }
 
-/* Шаг 6 и Шаг 7 закончен */
+/* Шаг 6 и Шаг 7 закончен. */
 
 .result__video-container,
 .content__list-container {
