--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,7 @@ ol {
   flex-direction: row;
   justify-content: center;
   align-self: center;
+  place-items: end;
   gap: 30px;
   width: 1140px;
 }
@@ -69,6 +70,7 @@ ol {
 }
 
 .content__list-container {
+  position: relative;
   display: flex;
   overflow: auto;
   flex-direction: column;
@@ -79,7 +81,6 @@ ol {
 .content__details {
   width: 100%;
   height: 100%;
-  margin-top: -85px;
 }
 
 .content__details > h1 {
@@ -89,6 +90,7 @@ ol {
 /* Первый шаг готов */
 
 .result__video-container {
+  position: relative;
   width: 711px;
   height: 386px;
   margin-bottom: 16px;
@@ -115,12 +117,14 @@ ol {
 .content__video-card-thumbnail {
   min-width: 194px;
   height: 103px;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
 }
 
 .content__video-card-description-container {
+  line-height: 30px;
   flex-grow: 1;
+  overflow: hidden;
 }
 
 /* 2 шаг закончен */
@@ -128,6 +132,7 @@ ol {
 .search-form__fieldset-title {
 font-size: 18px;
 font-weight: 400;
+padding: 4px;
 }
 
 .title {
@@ -162,12 +167,15 @@ font-weight: 400;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-weight: 400;
-  line-height: 16.2px;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 4;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-height: 105px;
+  -webkit-box-orient: vertical;
+}
+
+.content__video-card-description:hover {
+  text-decoration: underline;
 }
 
 /* Шаг 3 закончен */
@@ -201,7 +209,7 @@ font-weight: 400;
 }
 
 .search-form__textfield {
-  font-family: 'Fira Sans Condensed', sans-serif;
+font-family: 'Fira Sans Condensed', sans-serif;
 border-bottom: 1px solid #fff;
 border-top: 1px solid #fff;
 border-left: 0;
@@ -209,9 +217,9 @@ border-right: 0;
 color: #fff;
 background-color: transparent;
 appearance: none;
-width: 220px;
-padding: 4px 0;
+width: 230px;
 line-height: 100%;
+font-size: 18px;
 }
 
 .search-form__textfield::placeholder {
@@ -255,7 +263,7 @@ line-height: 100%;
   outline: 2px solid #fff;
 }
 
-.search-form__label-text:hover{
+.search-form__label .search-form__label-text:hover {
   text-decoration: underline;
 }
 
@@ -266,6 +274,7 @@ line-height: 100%;
   background-color: transparent;
   color: #fff;
   font-size: 18px;
+  font-weight: bold;
   cursor: pointer;
 }
 
@@ -294,6 +303,7 @@ line-height: 100%;
 
 .button:focus-visible {
 outline: 1px solid #fff;
+outline-offset: 1px;
 }
 
 /* Шаг 5 закончен */
@@ -308,7 +318,6 @@ outline: 1px solid #fff;
 
 .content__card-link:hover {
 text-decoration: underline;
-text-underline-offset: 2px;
 }
 
 .content__card-link:focus {
@@ -323,15 +332,5 @@ text-underline-offset: 2px;
   padding: 0 3px;
 }
 
-/* Шаг 6 и Шаг 7 закончен. */
 
-.result__video-container,
-.content__list-container {
-  position: relative;
-}
-
-.preloader {
-  position: absolute;
-  top:0;
-  left: 0;
-}
+/* Шаг 6 и Шаг 7 и Шаг 8 закончен  */
